--- a/반응형01/반응형웹/index.html
+++ b/반응형01/반응형웹/index.html
@@ -59,22 +59,16 @@
     <section class="portfolio">
             <p class="P">PORTFOLIO</p>
             <p class="last">WebDesigner 김민건</p>
-            <div>
-                <div class="img">
-                    <img src="../반응형웹/images/a1.jpg" height="180px">
-                    <img src="../반응형웹/images/a2.jpg" height="270px">
-                    <img src="../반응형웹/images/b3.jpg" height="100px">
-                </div>
-                <div class="img ">
-                    <img src="../반응형웹/images/b1.jpg" height="120px">
-                    <img src="../반응형웹/images/b2.jpg" height="250px">
-                    <img src="../반응형웹/images/a3.jpg">
-                </div>
-                <div class="img ">
-                    <img src="../반응형웹/images/c3.jpg" height="150px">
-                    <img src="../반응형웹/images/c2.jpg" height="100px">
-                    <img src="../반응형웹/images/c1.jpg" class="imgex">
-                </div>
+            <div class="container">
+                <img src="../반응형웹/images/a1.jpg" height="180px">
+                <img src="../반응형웹/images/a2.jpg" height="270px">
+                <img src="../반응형웹/images/b3.jpg" height="100px">
+                <img src="../반응형웹/images/b1.jpg" height="120px">
+                <img src="../반응형웹/images/b2.jpg" height="250px">
+                <img src="../반응형웹/images/a3.jpg">
+                <img src="../반응형웹/images/c3.jpg" height="150px">
+                <img src="../반응형웹/images/c2.jpg" height="100px">
+                <img src="../반응형웹/images/c1.jpg" class="imgex">
             </div>
     </section>
     <section class="contact">
