--- a/portfolio/port/index.html
+++ b/portfolio/port/index.html
@@ -26,6 +26,23 @@
             </ul>
         </nav>
     </header>
+    <!-- <div class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" />
+    </div>
+
+    <input type="radio" name="lav" id="lav1">
+    <input type="radio" name="lav" id="lav2">
+    <input type="radio" name="lav" id="lav3">
+
+
+    <div class="lavbox">
+        <label for="lav1"></label>
+        <label for="lav2"></label>
+        <label for="lav3"></label>
+    </div> -->
+
+    
     <section class="banner">
         <h1>PORTFOLIO</h1>
         <p>WebDesigner 김민건 </p>
@@ -100,4 +117,4 @@
         })
     </script>
 </body>
-</html>
+</html> 
