--- a/javascript/javascript.html
+++ b/javascript/javascript.html
@@ -3,9 +3,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>javascript</title>
-
-    </head>
+        <style>
+            
+        </style>
+        </head>
     <body>
-        <script src="hellow.js"></script>    
-    </body>
+        <script>
+            for (let x = 0; x < 10; x++) {
+                document.write("hello" +x+"<br>");
+            }
+        </script>
+    </body> 
 </html>
