--- a/1/index.html
+++ b/1/index.html
@@ -7,13 +7,17 @@
     <title>google api</title>
 </head>
 <body>
-    <div id="view-clock">
-        <h1>00:00:00</h1>
-    </div>
-    <div id="view-user">
-        <!-- 사용자에게 보여지는 부분 -->
-    </div>
+    <img src="/mingeon-kim.github.io/1/2c1d49d46ce1c56f698eabb8e024e4f3.jpg" id="back">
+        <div class="con">
+            <div id="view-clock">
+                <h1>00:00:00</h1>
+            </div>
+            <div id="view-user">
+                <!-- 사용자에게 보여지는 부분 -->
+            </div>
+        </div>
+    </img>
     <script src="clock.js"></script>
     <script src="userName.js"></script>
 </body>
-</html>sssssssssssssssssssssss
+</html>
