--- a/portfolio/port/index.html
+++ b/portfolio/port/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
                 <li><a href="">PORTFOLIO</a></li>
                 <li><a href="">CONTACT</a></li>
