--- a/portfolio/port/index.html
+++ b/portfolio/port/index.html
@@ -77,15 +77,15 @@
             <p class="P">PORTFOLIO</p>
             <p class="last">WebDesigner 김민건</p>
             <div class="container">
-                <img src="../port/images/a1.jpg" height="180px">
-                <img src="./images/a2.jpg" height="270px">
-                <img src="./images/b3.jpg" height="100px">
-                <img src="./images/b1.jpg" height="120px">
-                <img src="./images/b2.jpg" height="250px">
-                <img src="./images/a3.jpg">
-                <img src="./images/c3.jpg" height="150px">
-                <img src="./images/c2.jpg" height="100px">
-                <img src="./images/c1.jpg" class="imgex">
+                <img src="../port/images/a1.jpg" height="180px" class="scale">
+                <img src="./images/a2.jpg" height="270px" class="scale">
+                <img src="./images/b3.jpg" height="100px" class="scale">
+                <img src="./images/b1.jpg" height="120px" class="scale">
+                <img src="./images/b2.jpg" height="250px" class="scale">
+                <img src="./images/a3.jpg" class="scale">
+                <img src="./images/c3.jpg" height="150px" class="scale">
+                <img src="./images/c2.jpg" height="100px" class="scale">
+                <img src="./images/c1.jpg" class="scale">
             </div>
     </section>
     <section class="contact">
