--- a/port2/grid.html
+++ b/port2/grid.html
@@ -36,46 +36,47 @@
                 <div class="KF">
                     <p>Korean Food</p>
                     <p></p>
-                    <p>3</p>
-                    <p>4</p>
+                    <p></p>
+                    <p>Samgyeopsal<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        (pork belly)</p>
                     <p></p>
                     <p></p>
                     <p></p>
                     <p></p>
-                    <p>9</p>
+                    <p>Bibimbap</p>
                     <p></p>
-                    <p>11</p>
-                    <p>12</p>
+                    <p></p>
+                    <p>Japchae</p>
                     <p></p>
                     <p></p>
                     <p></p>
                 </div>
                 <div class="JF">
+                    <p></p>
+                    <p></p>
                     <p>Japanies Food</p>
-                    <p>2</p>
-                    <p>3</p>
-                    <p>4</p>
-                    <p>5</p>
-                    <p>6</p>
-                    <p>7</p>
-                    <p>8</p>
-                    <p>9</p>
-                    <p>10</p>
-                    <p>11</p>
-                    <p>12</p>
-                    <p>13</p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
                 </div>
                 <div class="CF">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
                     <p>Chinese Food</p>
-                    <p>2</p>
-                    <p>3</p>
-                    <p>4</p>
-                    <p>5</p>
-                    <p>6</p>
-                    <p>7</p>
-                    <p>8</p>
-                    <p>9</p>
-                    <p>10</p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
                 </div>
             </div>
         </div>
